--- a/test/pom.xml
+++ b/test/pom.xml
@@ -23,6 +23,11 @@
   			<artifactId>maven-jetty-plugin</artifactId>
   			<version>6.1.10</version>
   		</plugin>
+  		<plugin>
+  			<groupId>org.mortbay.jetty</groupId>
+  			<artifactId>maven-jetty-plugin</artifactId>
+  			<version>6.1.10</version>
+  		</plugin>
   	</plugins>
   </build>
 </project>
