--- a/test/pom.xml
+++ b/test/pom.xml
@@ -6,37 +6,49 @@
   <packaging>war</packaging>
   
   <properties>
-  	<jetty.version>9.2.11-SNAPSHOT</jetty.version>
+  	<org.springframework-version>4.1.0.RELEASE</org.springframework-version>
+	<org.springframework.security-version>3.2.0.RELEASE</org.springframework.security-version>
+	<org.aspectj-version>1.8.1</org.aspectj-version>
+	<org.slf4j-version>1.6.1</org.slf4j-version>
   </properties>
   
-  <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.3.RELEASE</version>
-    </parent>
-  
   <dependencies>
+  	<!--  spring mvc jar -->
   	<dependency>
-  		<groupId>org.eclipse.jetty.aggregate</groupId>
-  		<artifactId>jetty-webapp</artifactId>
-  		<version>8.1.9.v20130131</version>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>${org.springframework-version}</version>
+	</dependency>
+  	<dependency>
+  		<groupId>org.eclipse.jetty</groupId>
+  		<artifactId>jetty-maven-plugin</artifactId>
+  		<version>9.0.6.v20130930</version>
+  		<type>maven-plugin</type>
   	</dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-thymeleaf</artifactId>
-    </dependency>
+  	<dependency>
+  		<groupId>org.eclipse.jetty</groupId>
+  		<artifactId>jetty-webapp</artifactId>
+  		<version>9.0.6.v20130930</version>
+  	</dependency>
+  	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<version>${org.springframework-version}</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.11</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
   <build>
   	<plugins>
   		<plugin>
-  			<groupId>org.mortbay.jetty</groupId>
-  			<artifactId>maven-jetty-plugin</artifactId>
-  			<version>6.1.10</version>
-  		</plugin>
-  		<plugin>
-  			<groupId>org.mortbay.jetty</groupId>
-  			<artifactId>maven-jetty-plugin</artifactId>
-  			<version>6.1.10</version>
+  			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-maven-plugin</artifactId>
+			<version>9.0.6.v20130930</version>
   		</plugin>
   	</plugins>
   </build>
