spring 集成 mybatis

--- a/test/src/main/webapp/WEB-INF/web.xml
+++ b/test/src/main/webapp/WEB-INF/web.xml
@@ -16,4 +16,11 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<!-- spring mvc end -->
+	
+	<!-- spring start -->
+	<!-- 默认加载 /WEB-INF/applicationContext.xml-->
+	<listener>
+	  <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<!-- spring end -->
 </web-app>
